# voice-to-wav

./: .gitignore  Dockerfile  README.md  file_saver.py  main.py  pyproject.toml  recorder.py  recorderGUI.py  simpleGUI.py
