[tool.poetry]
name = "voice-to-wav"
version = "0.1.0"
description = ""
authors = ["Jackson <xxx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
PyAudio = "^0.2.13"
Wave = "^0.0.2"
audioop = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
